<resources>
    <string name="app_name">BuddyBuild</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="build_number">Build %1$d</string>
    <string name="logs">Logs</string>
    <string name="cancelled">cancelled</string>
    <string name="failed">failed</string>
    <string name="queued">queued</string>
    <string name="running">running</string>
    <string name="success">success</string>
    <string name="build_status">Build Status</string>
    <string name="started">Started</string>
    <string name="queued_for">Queued for</string>
    <string name="build_duration">Build duration</string>
    <string name="days">%dd</string>
    <string name="hours">%dh</string>
    <string name="minutes">%dm</string>
    <string name="seconds">%ds</string>
    <string name="a_few_seconds_ago">a few seconds ago</string>
    <string name="empty_value_placeholder">-</string>
    <string name="details">Details</string>
    <string name="android">android</string>
    <string name="ios">ios</string>
    <string name="generic_ooops_message">Oops… Something went wrong. Please try again.</string>
    <string name="unknown_email">Unknown email</string>
    <string name="email_mismatch_error">Email and password do not match</string>
    <string name="too_many_attempts_error">Too many attempts, try again later</string>
    <string name="no_logs">No Logs</string>
    <string name="settings">Settings</string>
    <string name="sign_out_email">Sign Out: %1$s</string>
    <string name="no_build_info_msg">No build info</string>
    <string name="demo">Demo</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="unofficial">Unofficial Notice</string>
    <string name="unofficial_notice_message">This is an unofficial BuddyBuild client. It is not built or supported
        by BuddyBuild. You are providing your login information to a third party.\n\nThis app is ad free, spam
        free, spyware free, and open source.</string>
    <string name="unofficial_notice_title">Notice</string>
    <string name="more_info">More Info…</string>
    <string name="send_feedback">Send feedback</string>
    <plurals name="minutes_ago">
        <item quantity="one">1 minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="hours_ago">
        <item quantity="one">1 hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="days_ago">
        <item quantity="one">1 day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="weeks_ago">
        <item quantity="one">1 week ago</item>
        <item quantity="other">%d weeks ago</item>
    </plurals>
    <plurals name="months_ago">
        <item quantity="one">1 month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>
    <plurals name="years_ago">
        <item quantity="one">1 year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>

</resources>
