<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bb_background_blue"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        tools:ignore="Overdraw">
        <!-- suppress since background doesn't actually overdraw-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:contentDescription="@null"
            android:src="@drawable/bb_logo_white"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_login_email_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:theme="@style/WhiteTextInputAccents">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_login_email_edittext"
                style="@style/WhiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:theme="@style/WhiteTextInputAccents"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_login_password_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:theme="@style/WhiteTextInputAccents"
            android.support.design:passwordToggleEnabled="true"
            android.support.design:passwordToggleTint="@color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_login_password_edittext"
                style="@style/WhiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:theme="@style/WhiteTextInputAccents"/>

        </android.support.design.widget.TextInputLayout>

        <com.buddybuild.ui.view.BuddyBuildWhiteButton
            android:id="@+id/fragment_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/login"/>

    </LinearLayout>

    <include
        android:id="@+id/progress_indicator"
        layout="@layout/progress_indicator"/>

</FrameLayout>