<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>

        <variable
            name="viewmodel"
            type="com.buddybuild.ui.viewmodel.BuildStatusViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="@dimen/material_side_margin"
        android:layout_marginRight="@dimen/material_side_margin"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/BuildDetailTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/build_status"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/line_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BuildDetailKeyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/build_details_key_width"
                android:text="@string/build_status"/>

            <TextView
                style="@style/BuildDetailValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@{viewmodel.getStatusIcon(context)}"
                android:drawableStart="@{viewmodel.getStatusIcon(context)}"
                android:drawablePadding="4dp"
                android:text="@{viewmodel.getStatus(context)}"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/line_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BuildDetailKeyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/build_details_key_width"
                android:text="@string/started"/>

            <TextView
                style="@style/BuildDetailValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.getStarted(context)}"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/line_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BuildDetailKeyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/build_details_key_width"
                android:text="@string/queued_for"/>

            <TextView
                style="@style/BuildDetailValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.getQueueDuration(context)}"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/line_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BuildDetailKeyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/build_details_key_width"
                android:text="@string/build_duration"/>

            <TextView
                style="@style/BuildDetailValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.getBuildDuration(context)}"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/line_divider"/>

    </LinearLayout>
</layout>